# phylum-deprecated

./: .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  README.org
examples/: CMakeLists.txt
examples/arduino_zero/: CMakeLists.txt  main.cpp
examples/arduino_zero_large_files/: CMakeLists.txt  main.cpp
examples/arduino_zero_prealloc/: CMakeLists.txt  main.cpp
examples/arduino_zero_serial_flash/: CMakeLists.txt  arduino-libraries  dependencies.sd  main.cpp
examples/arduino_zero_tree/: CMakeLists.txt  main.cpp
src/: backend.cpp  blake2b.cpp  block_alloc.cpp  blocked_file.cpp  caching_storage.cpp  confs.cpp  crc.cpp  file_index.cpp  file_preallocator.cpp  file_system.cpp  file_table.cpp  files.cpp  free_pile.cpp  general.cpp  journal.cpp  magic.cpp  platform.cpp  preallocated.cpp  serial_flash_fs.cpp  simple_file.cpp  size_calcs.h  super_block.cpp  super_block_manager.cpp  tree.cpp  tree_fs_super_block.cpp  unused_block_reclaimer.cpp  wandering_block_manager.cpp
src/backends/arduino_sd/: arduino_sd.cpp  arduino_sd.h  sd_raw.cpp  sd_raw.h  sd_raw_internal.h
src/backends/arduino_serial_flash/: arduino_serial_flash.cpp  arduino_serial_flash.h  serial_flash_allocator.cpp  serial_flash_allocator.h
src/backends/linux-memory/: debug_log.cpp  debug_log.h  linux-memory.cpp  linux-memory.h
src/backends/linux_memory/: debug_log.cpp  debug_log.h  linux_memory.cpp  linux_memory.h
src/confs/: backend.h  backend_nodes.h  block_alloc.h  confs.h  crc.h  file_system.h  in_memory_nodes.h  inodes.h  node_serializer.h  persisted_tree.h  private.h  super_block.h  tree.h
src/phylum/: addressing.h  backend.h  backend_nodes.h  basic_super_block_manager.h  block_alloc.h  blocked_file.h  caching_storage.h  crc.h  file.h  file_allocation.h  file_descriptor.h  file_index.h  file_layout.h  file_preallocator.h  file_system.h  file_table.h  files.h  free_pile.h  in_memory_nodes.h  inodes.h  journal.h  keys.h  layout.h  magic.h  node_serializer.h  persisted_tree.h  phylum.h  platform.h  preallocated.h  private.h  serial_flash_fs.h  serial_flash_state_manager.h  simple_file.h  stack_node_cache.h  super_block.h  super_block_manager.h  tree.h  tree_fs_super_block.h  unused_block_reclaimer.h  visitor.h  (+1 more)
test/: CMakeLists.txt
test/mcu/: CMakeLists.txt  boards.cpp  boards.h  main.cpp
test/testall/: CMakeLists.txt  dependencies.sd  lorem.h  main.cpp  test_addressing.cpp  test_allocation.cpp  test_extents.cpp  test_file_index.cpp  test_file_ops.cpp  test_file_ops.h  test_free_pile.cpp  test_gc.cpp  test_journal.cpp  test_large.cpp  test_persisted_tree.cpp  test_preallocated.cpp  test_resilience.cpp  test_rev2.cpp  test_super_block.cpp  test_tree.cpp  test_tree.h  test_tree_fs_super_block.cpp  test_wandering_block_fs.cpp  utilities.cpp  utilities.h
tool/: CMakeLists.txt  main.cpp
tool/linux/: CMakeLists.txt  dependencies.sd  main.cpp  phylum_input_stream.cpp  phylum_input_stream.h  record_walker.cpp  record_walker.h
tool/mcu/: CMakeLists.txt  main.cpp
